--- a/views/index.ejs
+++ b/views/index.ejs
@@ -29,10 +29,10 @@
             <div class="col">
                 <form action="/readApi" method="POST">
                 <table>
-                    <tr><th>Name</th><td><input type="text" name="name" class="form-control"></td></tr>
-                    <tr><th>mail id</th><td><input type="email" name="mailid" class="form-control"></td></tr>
-                    <tr><th>Phone number</th><td><input type="text" name="phone" class="form-control"></td></tr>
-                    <tr><th>Message</th><td><input type="text" name="message"class="form-control"></td></tr>
+                    <tr><th>Movie Name</th><td><input type="text" name="mname" class="form-control"></td></tr>
+                    <tr><th>Actor</th><td><input type="text" name="actor" class="form-control"></td></tr>
+                    <tr><th>Actress</th><td><input type="text" name="actress" class="form-control"></td></tr>
+                    <tr><th>director</th><td><input type="text" name="director" class="form-control"></td></tr>
                     <tr><th></th><td><button  type="submit" class="btn btn-success">ADD</button></td></tr>
                 </table>
                 </form>
