--- a/views/searchform.ejs
+++ b/views/searchform.ejs
@@ -30,7 +30,7 @@
                 <form action="/search" method="POST">
                 <table>
                     
-                    <tr><th>Admno </th><td><input type="text" name="admno" class="form-control"></td></tr>
+                    <tr><th>Movie Name </th><td><input type="text" name="mname" class="form-control"></td></tr>
                     
                     <tr><th></th><td><button  type="submit" class="btn btn-success">SEARCH</button></td></tr>
                 </table>
