--- a/views/searchresult.ejs
+++ b/views/searchresult.ejs
@@ -30,13 +30,11 @@
                
                 <table>
                   <% for(var i=0;i<data.length;i++){ %>
-                    <tr><th>Name</th><td><%= data[i].name %></td></tr>
-                    <tr><th>mail id</th><td><%= data[i].mailid %></td></tr>
-                    <tr><th>Phone number</th><td><%=data[i].phone %></td></tr>
-                    <tr><th>Admn no</th><td><%= data[i].admno %></td></tr>
-                    <tr><th>branch</th><td><%= data[i].branch %></td></tr>
-                    <tr><th>college</th><td><%= data[i].college %></td></tr>
-                   
+                    <tr><th>Movie Name</th><td><%= data[i].mname %></td></tr>
+                    <tr><th>Actor</th><td><%= data[i].actor %></td></tr>
+                    <tr><th>Actress</th><td><%=data[i].actress %></td></tr>
+                    <tr><th>director</th><td><%= data[i].director %></td></tr>
+                    
                     <% } %>
                 </table>
                
